--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,6 @@
 /* Global rules */
 
-@import url('https://fonts.googleapis.com/css?family=Quicksand');
-@import url('https://fonts.googleapis.com/css?family=Tangerine');
+@import url('https://fonts.googleapis.com/css?family=Quicksand|Spectral');
 html {
     background-color: lightgray;
     font-family: 'Quicksand', sans-serif;
@@ -11,6 +10,12 @@ html {
     background-repeat: no-repeat;
     background-size: 2000px 1200px;
 }
+
+body{
+    margin:0; /* removes space above body, top of page */
+ }
+ 
+
 
 ::selection {
     color: #000; 
@@ -25,7 +30,7 @@ h1 {
 }
 
 h1.page-header{
-    font-family: 'Tangerine',serif;
+    font-family: 'Spectral',serif;
     -webkit-border-top-left-radius: 5px;
     -webkit-border-top-right-radius: 5px;
     -moz-border-radius-topleft: 5px;
